--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/froala_blocks.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/index.css" rel="stylesheet" type="text/css">
+
         <style>
             @font-face {
             font-family: 'Showcard_Gothic';
@@ -34,17 +37,17 @@
         </div>
         <!-- load -->
         <div id="load_screen" style="width: 100vw;height:100vh;position: absolute;z-index: 2;top:0;left:0;background-color: #000000a3;" onclick="div_hide_show(this.id, 'hide')">
-            <div style="width: 454px;height: 205px;background-color: white; margin: 30vh auto;border-bottom-right-radius: 50%;text-align: center;color: black;opacity: 100%;">
+            <div style="width: 306px;height: 174px;background-color: white;margin: 37vh auto;border-bottom-right-radius: 50%;text-align: center;color: black;opacity: 100%;">
                 <div style="width: 100%;height:80px;line-height: 100px;font-size: 30px;font-family: Showcard_Gothic;">
                     Web<i style="font-size: 50px;font-family: Arial, Helvetica, sans-serif;">2</i>Epub
                 </div>
                 <div style="width: 100%;height: 5px;">
                     <div style="width: 80%;height: 100%;background-color: #808080;margin-left: auto;margin-right: auto;"></div>
                 </div>
-                <div style="width: 100%;height:50px;line-height: 50px;font-size: 20px;">
+                <div style="width: 100%;height: 41px;line-height: 32px;font-size: 14px;">
                     Convert Novel to Epub file
                 </div>
-                <div style="width: 100%;height:70px;text-align: center;margin-top: 30px;">
+                <div style="width: 100%;height:70px;text-align: center;margin-top: 0px;">
                     <button style="width:150px;height: 25px;background-color: #90C418;border: 2px solid #597D04;display: inline-block;border-radius: 30px;"><img src="imgs/Multiply icon.png" style="height: 74px;margin-top: -27px;"></button>
                 </div>
             </div>
@@ -74,7 +77,7 @@
         <!-- menu window scroller -->
         <div id="menu_window_scroller" style="min-width:300px;width:100vw;min-height:500px;height: 90vh;position: absolute;background-color: #010c1638;top:0px;left:0px;overflow-y: auto;overflow-x: auto;display: none;">
             <!-- Enter book url/menu viewer -->
-            <div id="convert_to_epub_menu_container" style="width: 80vw;max-width: 800px;height: 80vh;min-height: 400px;overflow-y: auto;background-color: rgb(60, 58, 58);margin: 1.6% auto;display: block;">
+            <div id="convert_to_epub_menu_container" style="width: 91vw;max-width: 506px;height: 80vh;min-height: 400px;overflow-y: auto;background-color: rgb(60, 58, 58);margin: 1.6% auto;display: block;">
                 <div style="width: 80%;height: 40px;margin-left: auto;margin-right: auto;background-color: #696767;color: white;font-weight: 700;font-size: 30px;font-family: shredded;line-height: 40px;padding-left: 12px;text-shadow: -3px 0px 8px #0a0a0a, -1px -1px grey;letter-spacing: 2px;">
                     Convert to Epub
                     <button style="width:50px;height: 43px;background-color:#D3D3D3;float: right;border: none;"><img src="imgs/Multiply icon.png" style="height: 73px;margin-top: -16px;margin-left: -19px;" onclick="div_hide_show('convert_to_epub_menu_container', 'hide'),main_menu_upper_layer_hide()"></button>
@@ -182,8 +185,8 @@
                         </div>
                     </div>
                     <div style="width: 100%;height:100px">
-                        <div style="width: 93%;max-width: 379px;height:100%;margin-left: auto;margin-right: auto;border: 1px solid white;margin-top: 53px;border-radius: 8px;">
-                            <div style="width: 100%;height:50%;" >
+                        <div style="width: 99%;max-width: 327px;height:100%;margin-left: auto;margin-right: auto;border: 1px solid white;margin-top: 53px;border-radius: 8px;">
+                            <div style="width: 100%;height:50%;">
                                 <button style="width: 26%;height: 100%;background-color: white;margin-right: -6px;border-top-left-radius: 8px;font-size: 15px;">
                                     Select all
                                 </button>
@@ -260,13 +263,13 @@
             </div>
         </div>
         <!-- quick navigation -->
-        <div id="quick_navi_container" style="width: 100vw;height: 10vh;position: fixed;bottom: 0;left: 0;display: none;">
-            <div style="width:80vw;height: 2px;background-color: black;margin-left: auto;margin-right: auto;margin-top: 10px;max-width:700px"></div>
+        <div id="quick_navi_container" style="width: 100vw;height: 10vh;position: fixed;bottom: 0px;left: 0px;display: none;">
+            <div style="width:80vw;height: 2px;background-color: black;margin-left: auto;margin-right: auto;margin-top: 3px;max-width:700px;"></div>
             <div style="width:100%;min-width: 250px;height:100%;min-height: 85px;text-align: center;max-width: 550px;margin-left: auto;margin-right: auto;">
-                <img src="imgs/Website icon.png" style="height:70px;margin-right: 12%;" onclick="div_hide_show('menu_window_scroller')">
-                <img src="imgs/Book icon.png" style="height:70px;margin-right: 12%;">
-                <img src="imgs/Support icon.png" style="height:70px;margin-right: 12%;">
-                <img src="imgs/Tv icon.png" style="height:70px">
+                <img src="imgs/Website icon.png" style="height: 35px;margin-right: 12%;" onclick="div_hide_show('menu_window_scroller')">
+                <img src="imgs/Book icon.png" style="height: 33px;margin-right: 12%;">
+                <img src="imgs/Support icon.png" style="height: 41px;margin-right: 12%;">
+                <img src="imgs/Tv icon.png" style="height: 41px;">
             </div>
         </div>
 
