--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
                 <div style="width: 100%;height: 40px;line-height: 100px;">
                     <img src="imgs/info.png" style="width: 57px;margin-top: -28px;">
                 </div>
-                <div id="alert_box_1_text" style="width: 100%;height: 91px;line-height: 32px;font-size: 14px;">
+                <div id="alert_box_1_text" style="width: 100%;height: 91px;overflow-y: auto;line-height: 32px;font-size: 14px;">
                     Are you sure you want to continue
                 </div>
                 <div id="alert_box_1_buttons" style="width: 100%;height:70px;text-align: center;margin-top: 0px;"></div>
@@ -282,10 +282,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
 
             <!--  -->
             <div id="_menu_container" style="width: 80vw;max-width:800px;height: 83vh;min-height:400px;overflow-y: auto;background-color: #3C3A3A;margin: 5% auto;display:none">
