--- a/static/index.html
+++ b/static/index.html
@@ -198,6 +198,9 @@
                                 </select>
                             </div>
                         </div>
+                        <div style="width: 100%;height: 20px;text-align: center;color: white;font-size: 15px;margin-top: 10px;">
+                            Total Chapters : <b>9</b>
+                        </div>
                         <div style="width: 100%;height:100px;">
                             <div style="width: 99%;max-width: 291px;height:100%;margin-left: auto;margin-right: auto;border: 1px solid white;margin-top: 53px;border-radius: 8px;font-size: 11px;min-width: 316px;">
                                 <div style="width: 100%;height:50%;">
