--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
         </style> 
     </head>
     <body style="font-family: Arial, Helvetica, sans-serif;"> 
-        <div id="request_html_container" style="display: none;"></div>
+        <div id="request_html_container" style="display: non;"></div>
 
         <!-- alert-->
         <div id="please_wait_1" style="width: 100%;height:100%;position: absolute;top:0;left:0;background-color: rgba(133, 133, 133, 0.518);display: none;z-index: 2;">
