--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div  style="width: 100%;text-align: center;font-size: 13px;font-weight: 700;height: 20px;overflow: hidden;color: #D40000;">
                     <div style="width:80%;margin-left:auto;margin-right:auto">
-                        <div id="please_wait_2_chapter_name" style="width: 50%;height:100%;text-align: center;text-overflow: ellipsis;display: inline-block;">
+                        <div id="please_wait_2_chapter_name" style="width: 50%;height:100%;text-align: center;text-overflow: ellipsis;display: inline-block;overflow-y: hidden;">
                             chapter 1
                         </div>
                         <div id="please_wait_2_chapter_numbers" style="width: 40%;height:100%;text-align: center;text-overflow: ellipsis;border-left:2px solid black;display: inline-block;">
