--- a/static/index.html
+++ b/static/index.html
@@ -48,7 +48,7 @@
                         <div id="please_wait_2_chapter_name" style="width: 50%;height:100%;text-align: center;text-overflow: ellipsis;display: inline-block;overflow-y: hidden;">
                             chapter 1
                         </div>
-                        <div id="please_wait_2_chapter_numbers" style="width: 40%;height:100%;text-align: center;text-overflow: ellipsis;border-left:2px solid black;display: inline-block;">
+                        <div id="please_wait_2_chapter_numbers" style="width: 40%;height:100%;text-align: center;text-overflow: ellipsis;border-left:2px solid black;display: inline-block;vertical-align: top;">
                             1/200
                         </div>
                     </div>
