--- a/static/index.html
+++ b/static/index.html
@@ -93,7 +93,7 @@
         <div style="width: 100vw;height: auto;margin-top: 30vh;">
             <div style="width: 300px;margin-left: auto;margin-right: auto;">
                 <div style="width: 49.5%;height: 300px;display: inline-block;margin-right: -5px;">
-                    <div style="width: 98%;height: 49.5%;border: 2px solid black;margin-left: 2.5%;" onclick="main_menu_upper_layer_show(),div_hide_show('convert_to_epub_menu_container')">
+                    <div style="width: 98%;height: 49.5%;border: 2px solid black;margin-left: 2.5%;" onclick="main_menu_upper_layer_show(),div_hide_show('convert_to_epub_menu_container'),div_hide_show('process_start_restart_option_button')">
                         <img src="imgs/Website icon.png" style="width: 60px;margin-top: 32%;margin-left: 30%;" alt="Enter book url">
                     </div>
                     <div style="width: 98%;height: 49.5%;border: 2px solid black;margin-top: 4%;margin-left: -0.5%;">
@@ -111,6 +111,15 @@
                 </div>
             </div>
         </div>
+        <!-- process start/restart float control-->
+        <!--restart-->
+        <i class="la la-plus"  id="process_start_restart_restart_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 32vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: white;text-align: center;display:none"><img src="/imgs/Reset icon.png" style="width:60px" onclick="div_hide_show('process_start_restart_continue_button', 'hide'),div_hide_show('process_start_restart_restart_button', 'hide')"></i>
+        <!-- continue -->
+        <i class="la la-plus"  id="process_start_restart_continue_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 47vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: #90C418;text-align: center;display:none"><img src="/imgs/Sort Right icon.png" style="width:60px" onclick="div_hide_show('process_start_restart_continue_button', 'hide'),div_hide_show('process_start_restart_restart_button', 'hide')"></i>
+        <!-- options menu -->
+        <!-- <div style="width: 80vw;max-width:800px;height: 83vh;min-height:400px;overflow-y: auto;background-color: #3C3A3A;margin: 5% auto"> -->
+            <i class="la la-plus" id="process_start_restart_option_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 20vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: #D40000;text-align: center;display: none;"><img src="imgs/Exclamation Mark icon.png" style="width:60px" onclick="div_hide_show('process_start_restart_continue_button', 'show'),div_hide_show('process_start_restart_restart_button', 'show')"></i>
+        <!-- </div> --> 
 
         <!-- menu window scroller -->
         <div id="menu_window_scroller" style="min-width:300px;width:100vw;min-height:500px;height: 90vh;position: absolute;background-color: #010c1638;top:0px;left:0px;overflow-y: auto;overflow-x: auto;display: none;">
@@ -118,7 +127,7 @@
             <div id="convert_to_epub_menu_container" style="width: 91vw;max-width: 506px;height: 80vh;min-height: 400px;overflow-y: auto;background-color: rgb(60, 58, 58);margin: 1.6% auto;display: block;">
                 <div style="width: 80%;height: 40px;margin-left: auto;margin-right: auto;background-color: #696767;color: white;font-weight: 700;font-size: 30px;font-family: shredded;line-height: 40px;padding-left: 12px;text-shadow: -3px 0px 8px #0a0a0a, -1px -1px grey;letter-spacing: 2px;">
                     Convert to Epub
-                    <button style="width:50px;height: 43px;background-color:#D3D3D3;float: right;border: none;"><img src="imgs/Multiply icon.png" style="height: 73px;margin-top: -16px;margin-left: -19px;" onclick="div_hide_show('convert_to_epub_menu_container', 'hide'),main_menu_upper_layer_hide()"></button>
+                    <button style="width:50px;height: 43px;background-color:#D3D3D3;float: right;border: none;"><img src="imgs/Multiply icon.png" style="height: 73px;margin-top: -16px;margin-left: -19px;" onclick="div_hide_show('convert_to_epub_menu_container', 'hide'),main_menu_upper_layer_hide(),div_hide_show('process_start_restart_option_button', 'hide')"></button>
                 </div>
 
 
