--- a/static/index.html
+++ b/static/index.html
@@ -93,7 +93,7 @@
         <div style="width: 100vw;height: auto;margin-top: 30vh;">
             <div style="width: 300px;margin-left: auto;margin-right: auto;">
                 <div style="width: 49.5%;height: 300px;display: inline-block;margin-right: -5px;">
-                    <div style="width: 98%;height: 49.5%;border: 2px solid black;margin-left: 2.5%;" onclick="main_menu_upper_layer_show(),div_hide_show('convert_to_epub_menu_container'),div_hide_show('process_start_restart_option_button')">
+                    <div style="width: 98%;height: 49.5%;border: 2px solid black;margin-left: 2.5%;" onclick="menu_1(),main_menu_upper_layer_show(),div_hide_show('convert_to_epub_menu_container'),div_hide_show('process_start_restart_option_button')">
                         <img src="imgs/Website icon.png" style="width: 60px;margin-top: 32%;margin-left: 30%;" alt="Enter book url">
                     </div>
                     <div style="width: 98%;height: 49.5%;border: 2px solid black;margin-top: 4%;margin-left: -0.5%;">
@@ -113,7 +113,7 @@
         </div>
         <!-- process start/restart float control-->
         <!--restart-->
-        <i class="la la-plus"  id="process_start_restart_restart_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 32vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: white;text-align: center;display:none"><img src="/imgs/Reset icon.png" style="width:60px" onclick="div_hide_show('process_start_restart_continue_button', 'hide'),div_hide_show('process_start_restart_restart_button', 'hide')"></i>
+        <i class="la la-plus"  id="process_start_restart_restart_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 32vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: white;text-align: center;display:none"><img src="/imgs/Reset icon.png" style="width:60px" onclick="div_hide_show('process_start_restart_continue_button', 'hide'),div_hide_show('process_start_restart_restart_button', 'hide'),div_hide_show('please_wait_2', 'hide'),page_reload()"></i>
         <!-- continue -->
         <i class="la la-plus"  id="process_start_restart_continue_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 47vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: #90C418;text-align: center;display:none"><img src="/imgs/Sort Right icon.png" style="width:60px" onclick="div_hide_show('process_start_restart_continue_button', 'hide'),div_hide_show('process_start_restart_restart_button', 'hide')"></i>
         <!-- options menu -->
@@ -351,7 +351,7 @@
         <div id="quick_navi_container" style="width: 100vw;height: 10vh;position: fixed;bottom: 0px;left: 0px;display: none;z-index: 5;">
             <div style="width:80vw;height: 2px;background-color: black;margin-left: auto;margin-right: auto;margin-top: 3px;max-width:700px;"></div>
             <div style="width:100%;min-width: 250px;height:100%;min-height: 85px;text-align: center;max-width: 550px;margin-left: auto;margin-right: auto;">
-                <img src="imgs/Website icon.png" style="height: 35px;margin-right: 12%;" onclick="div_hide_show('menu_window_scroller')">
+                <img src="imgs/Website icon.png" style="height: 35px;margin-right: 12%;" onclick="div_hide_show('menu_window_scroller'),menu_1()">
                 <img src="imgs/Book icon.png" style="height: 33px;margin-right: 12%;">
                 <img src="imgs/Support icon.png" style="height: 41px;margin-right: 12%;">
                 <img src="imgs/Tv icon.png" style="height: 41px;">
