--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,12 @@
     <body style="font-family: Arial, Helvetica, sans-serif;"> 
         <div id="request_html_container" style="display: none;"></div>
 
+        <!-- -->
+        <div id="text_notification_container" style="width: 100%;height: auto;position: absolute;top:4vh;left: 0px;z-index: 7;display: none;">
+            <div id="text_notification" style="width: 40vw;max-width: 150px;min-height: 30px;box-shadow: 0px 1px 23px 4px black;background-color: white;color: black;border-radius: 6px; margin: 0px auto 0px auto; text-align: center;font-size: 20px;">
+                hello
+            </div>
+        </div>
         <!-- alert-->
         <div id="please_wait_1" style="width: 100%;height:100%;position: absolute;top:0;left:0;background-color: rgba(133, 133, 133, 0.518);display: none;z-index: 2;">
                 <div style="width: 81%;height: 35vh;/*background-color: #838383 */;background-color:white;margin: 30vh auto;box-shadow: 2px 3px 18px;max-width: 500px;border-bottom-left-radius: 30%;">
@@ -113,9 +119,9 @@
         </div>
         <!-- process start/restart float control-->
         <!--restart-->
-        <i class="la la-plus"  id="process_start_restart_restart_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 32vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: white;text-align: center;display:none"><img src="/imgs/Reset icon.png" style="width:60px" onclick="div_hide_show('process_start_restart_continue_button', 'hide'),div_hide_show('process_start_restart_restart_button', 'hide'),div_hide_show('please_wait_2', 'hide'),page_reload()"></i>
+        <i class="la la-plus"  id="process_start_restart_restart_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 32vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: white;text-align: center;display:none"><img src="/imgs/Reset icon.png" style="width:46px;margin-top: 8px" onclick="div_hide_show('process_start_restart_continue_button', 'hide'),div_hide_show('process_start_restart_restart_button', 'hide'),div_hide_show('please_wait_2', 'hide'),page_reload(), text_notification ('Restarting')"></i>
         <!-- continue -->
-        <i class="la la-plus"  id="process_start_restart_continue_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 47vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: #90C418;text-align: center;display:none"><img src="/imgs/Sort Right icon.png" style="width:60px" onclick="div_hide_show('process_start_restart_continue_button', 'hide'),div_hide_show('process_start_restart_restart_button', 'hide')"></i>
+        <i class="la la-plus"  id="process_start_restart_continue_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 47vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: #90C418;text-align: center;display:none"><img src="/imgs/Sort Right icon.png" style="width:64px" onclick="div_hide_show('process_start_restart_continue_button', 'hide'),div_hide_show('process_start_restart_restart_button', 'hide'), text_notification ('Attempting to Continue')"></i>
         <!-- options menu -->
         <!-- <div style="width: 80vw;max-width:800px;height: 83vh;min-height:400px;overflow-y: auto;background-color: #3C3A3A;margin: 5% auto"> -->
             <i class="la la-plus" id="process_start_restart_option_button" style="color: black;width: 14vw;height: 14vw;min-height: 41px;min-width: 41;max-height: 60px;max-width: 60px;background-color: white;border: none;border-radius: 19px;position: absolute;bottom: 20vh;left: 2vw;z-index: 4;box-shadow: -1px -1px 13px 2px #d40000;background-color: #D40000;text-align: center;display: none;"><img src="imgs/Exclamation Mark icon.png" style="width:60px" onclick="div_hide_show('process_start_restart_continue_button', 'show'),div_hide_show('process_start_restart_restart_button', 'show')"></i>
