--- a/static/index.html
+++ b/static/index.html
@@ -202,7 +202,7 @@
                             </button>
                         </div>
                         <div style="width: 100%;height:auto;text-align: center;margin-top: 25px;">
-                            <button style="width: 60%;max-width: 300px;height: 40px;background-color: white;color: black;border-radius: 10px;border: none;font-size: 18px;" onclick="epub_pack()">
+                            <button style="width: 60%;max-width: 300px;height: 40px;background-color: white;color: black;border-radius: 10px;border: none;font-size: 18px;" onclick="epub_pack(true)">
                                 Pack Epub
                             </button>
                         </div>
